--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -40,6 +40,7 @@ th {
   text-align: left;
   background: #eee;
   font-weight: bold;
+  white-space: nowrap;
 }
 th.subheader {
   font-weight: normal;
@@ -140,4 +141,32 @@ td.done {
 }
 .nowrap {
   white-space: nowrap;
+}
+
+
+.combined {
+  overflow: hidden;
+  width: 100%;
+}
+.combined > .combined-left {
+  float: left;
+  width: 640px;
+  box-shadow: 0px -5px 10px 3px #ccc;
+}
+.combined > .combined-right {
+  margin-left: 640px;
+}
+
+.scrollable {
+  overflow-x: scroll;
+}
+
+.h20 {
+  height: 20px;
+}
+.h40 {
+  height: 40px;
+}
+.h60 {
+  height: 60px;
 }
