--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -1,4 +1,4 @@
-html * {
+.table-content * {
   font-size: 12px !important;
 }
 
@@ -6,167 +6,164 @@ body {
   margin: 0.5em;
 }
 
-table {
+.table-content table {
   border-collapse: collapse;
   margin-bottom: 0.5em;
-}
-
-table:last-child {
-  margin-bottom: 0;
-}
-
-table {
   width: 100%;
 }
 
-section {
+.table-content table:last-child {
+  margin-bottom: 0;
+}
+
+.table-content section {
   margin-bottom: 0.5em;
 }
 
-section:last-child {
+.table-content section:last-child {
   margin-bottom: none;
 }
 
-tr:hover > td {
+.table-content tr:hover > td {
   background: #eee transparent;
 }
 
-td, th { 
+.table-content td, .table-content th { 
   padding: .2em .5em; 
   border: 1px solid #ccc;
 }
 
-th {
+.table-content th {
   text-align: left;
   background: #eee;
   font-weight: bold;
   white-space: nowrap;
 }
-th.subheader {
+.table-content th.subheader {
   font-weight: normal;
 }
 
-tr.summary {
+.table-content tr.summary {
   border-top: 2px solid #ccc;
   font-weight: bold;
 }
 
-th small {
+.table-content th small {
   font-weight: normal;
 }
 
-table.component th.summary {
+.table-content table.component th.summary {
   width: auto;
 }
-table.component th.version {
+.table-content table.component th.version {
   width: auto;
 }
-table.component th.status {
+.table-content table.component th.status {
   width: 6%;
 }
-table.component th.key {
+.table-content table.component th.key {
   width: 4%;
 }
-table.component th.hours {
+.table-content table.component th.hours {
   width: 2.5em;
 }
-table.component td.summary {
+.table-content table.component td.summary {
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 25em;
     white-space: nowrap;
 }
 
-table.issues th.hours {
+.table-content table.issues th.hours {
   width: 5em;
 }
 
-table.assignees th.hours {
+.table-content table.assignees th.hours {
   width: 5em;
 }
 
-table.versions th.hours {
+.table-content table.versions th.hours {
   width: 4em;
 }
 
-table.epics th.hours {
+.table-content table.epics th.hours {
   width: 5em;
 }
 
-table.backlog {
+.table-content table.backlog {
   width: auto;
   max-width: 100%;
 }
 
-tr.highlighted,
-tr.highlighted:hover {
+.table-content tr.highlighted,
+.table-content tr.highlighted:hover {
   background-color: aqua;
 }
 
-tr.highlighted td.in-progress {
+.table-content tr.highlighted td.in-progress {
   background-color: rgba(255, 213, 128, 0.8);
 }
-tr.highlighted td.done {
+.table-content tr.highlighted td.done {
   background-color: rgba(144, 238, 144, 0.8);
 }
 
-tr.highlighted-epic,
-tr.highlighted-epic:hover {
+.table-content tr.highlighted-epic,
+.table-content tr.highlighted-epic:hover {
   background-color: aqua;
 }
 
-tr.highlighted td.in-progress {
+.table-content tr.highlighted td.in-progress {
   background-color: rgba(255, 213, 128, 0.8);
 }
-tr.highlighted td.done {
+.table-content tr.highlighted td.done {
   background-color: rgba(144, 238, 144, 0.8);
 }
 
-td.in-progress {
+.table-content td.in-progress {
   background-color: #ffd580;
 }
 
-td.done {
+.table-content td.done {
   background-color: lightgreen;
 }
 
-.danger {
+.table-content .danger {
   color: red;
 }
-.warning {
+.table-content .warning {
   color: orange;
 }
-.success {
+.table-content .success {
   color: green;
 }
-.nowrap {
+.table-content .nowrap {
   white-space: nowrap;
 }
 
 
-.combined {
+.table-content .combined {
   overflow: hidden;
   width: 100%;
 }
-.combined > .combined-left {
+.table-content .combined > .combined-left {
   float: left;
   width: 640px;
   box-shadow: 0px -5px 10px 3px #ccc;
 }
-.combined > .combined-right {
+.table-content .combined > .combined-right {
   margin-left: 640px;
 }
 
-.scrollable {
+.table-content .scrollable {
   overflow-x: scroll;
 }
 
-.h20 {
+.table-content .h20 {
   height: 20px;
 }
-.h40 {
+.table-content .h40 {
   height: 40px;
 }
-.h60 {
+.table-content .h60 {
   height: 60px;
 }
