--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -148,7 +148,6 @@ body {
 .table-content .combined > .combined-left {
   float: left;
   width: 640px;
-  box-shadow: 0px -5px 10px 3px #ccc;
 }
 .table-content .combined > .combined-right {
   margin-left: 640px;
@@ -156,6 +155,7 @@ body {
 
 .table-content .scrollable {
   overflow-x: scroll;
+  box-shadow: 0px 0px 10px 3px inset #ccc;
 }
 
 .table-content .h20 {
