--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -112,6 +112,11 @@ body {
   background-color: aqua;
 }
 
+.table-content tr.highlighted-story,
+.table-content tr.highlighted-story:hover {
+  background-color: aqua;
+}
+
 .table-content tr.highlighted td.in-progress {
   background-color: rgba(255, 213, 128, 0.8);
 }
