--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -184,7 +184,7 @@ span.collapse {
   display: block;
   text-align: center;
   position: absolute;
-  top: .5em;
+  top: .4em;
   right: .2em;
 }
 
@@ -193,9 +193,9 @@ span.collapse:hover {
 }
 
 span.collapse:after {
-  content: "⌄";
+  content: "−";
 }
 
 span.collapse.up:after {
-  content: "⌃";
+  content: "+";
 }
