--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -6,6 +6,11 @@ body {
   margin: 0.5em;
 }
 
+td > input {
+  padding: 0;
+  margin: 0;
+}
+
 .table-content table {
   border-collapse: collapse;
   margin-bottom: 0.5em;
@@ -144,7 +149,8 @@ body {
   background-color: rgba(144, 238, 144, 0.8);
 }
 
-.table-content tr.hidden {
+.table-content tr.hidden,
+.table-content tr.collapsed {
   display: none;
 }
 
