Adjust format for numeric table cells

--- a/src/jira_report_generator/static/style.css
+++ b/src/jira_report_generator/static/style.css
@@ -301,3 +301,8 @@ th > span.collapse.up:after {
 .tab-content.active {
   display: block;
 }
+
+.numeric,
+.table-content th.numeric {
+  text-align: right;
+}
